--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_script:
   - composer self-update
   - composer install --prefer-source --no-interaction --dev
   
-script: phpunit --bootstrap vendor/autoload.php tests
+script: vendor/bin/phpunit --bootstrap vendor/autoload.php tests
 
 notifications:
     on_success: never
