--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "php": ">=5.6.0"
     },
     "require-dev": {
+        "phpunit/phpunit": "^5.7"
     },
     "autoload": {
         "psr-4": {
